--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.0.1",
     "reflect-metadata": "^0.2.0",
