--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "vitest": "^2.1.8"
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^6.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
