--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.4.15",
     "@swc/cli": "^0.5.2",
-    "@swc/core": "^1.10.1",
+    "@swc/core": "^1.10.3",
+    "@swc/jest": "^0.2.37",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
@@ -54,7 +55,7 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
@@ -75,7 +76,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s?$": ["@swc/jest"]
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
