--- a/swc.config.json
+++ b/swc.config.json
@@ -1,17 +1,17 @@
 {
-    "jsc": {
-      "parser": {
-        "syntax": "typescript",
-        "tsx": true,
-        "decorators": true
-      },
-      "transform": {
-        "legacyDecorator": true,
-        "decoratorMetadata": true
-      }
+  "$schema": "https://json.schemastore.org/swcrc",
+  "sourceMaps": true,
+  "jsc": {
+    "parser": {
+      "syntax": "typescript",
+      "decorators": true,
+      "dynamicImport": true
     },
-    "module": {
-      "type": "commonjs"
-    }
-  }
-  
+    "transform": {
+      "legacyDecorator": true,
+      "decoratorMetadata": true
+    },
+    "baseUrl": "./"
+  },
+  "minify": false
+}
