--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.1.1",
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -35,7 +36,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -85,8 +87,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "moduleNameMapper":{
-      "^src/(.*)$":"<rootDir>/$1"
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
     }
   }
 }
